--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h2>請勿違反 [Discord's ToS](https://discord.com/terms)</h2>
     <h2>Do not against [Discord's ToS](https://discord.com/terms)</h2>
 
+    <link rel="stylesheet" href="https://discord.com/terms">
+
     <h6>[Support server](https://discord.gg/dnvKBk6V4y)</h6>
 </body>
 </html>
